<resources xmlns:gio="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Monin</string>
    <string name="login_text">A world of beverage innovation awaits. To explore hundreds of beverages and start your own library of recipes, please connect below.</string>
    <string name="prompt_user_name">Enter your username.</string>
    <string name="prompt_password">Enter your password.</string>
    <string name="action_login">Login</string>
    <string name="action_account_create">Create Account</string>
    <string name="action_social_connect">LOGIN WITH SOCIAL MEDIA</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="preference_key_token" translatable="false">key_token</string>
    <string name="connection_failed">Connection Failed.</string>
    <string name="social_connect_dialog_args_key" translatable="false">social_connect_dialog_args_key</string>
    <string name="login_progress">Login Processing…</string>
    <string name="password_change_progress">Change passsword processing…</string>
    <string name="update_profile_progress">Updating profile…</string>
    <string name="please_wait">Please wait…</string>
    <string name="path_token" translatable="false">token</string>
    <string name="key_content_type" translatable="false">Content-Type</string>
    <string name="header_content_urlencoded" translatable="false">application/x-www-form-urlencoded</string>
    <string name="header_json" translatable="false">application/json; charset=utf-8</string>
    <string name="header_token" translatable="false">Bearer <gio:g id="token">%1$s</gio:g></string>
    <string name="header_generic_token" translatable="false">amx <gio:g id="token">%1$s</gio:g></string>
    <string name="link_account_facebook" translatable="false">LINK ACCOUNT TO FACEBOOK</string>
    <string name="link_account_google" translatable="false">LINK ACCOUNT TO GOOGLE</string>
    <string name="or_create_account">OR Create an Account</string>
    <string name="prompt_firstname_lastname">First and Last name</string>
    <string name="prompt_account_email">Please enter your email</string>
    <string name="action_community">Community</string>
    <string name="message_page1_walkthrough">Explore, create and share 100\'s of delicious and on-trend recipes and see what others in your area (and around the world) are creating at their establishment. This and so much more awaits!</string>
    <string name="privacy_policy">Lorem ipsum dolor sit amet, consectetur adipsicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam</string>
    <string name="allow">Allow</string>
    <string name="dialog_geolocation">Allow \"Monin\" to use your geolocation?</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_monin">Welcome to the World of MONIN</string>
    <string name="but_first">But first…</string>
    <string name="age_confirmation">Please confirm that you are 21 years old and that you are agree to privacy policy below.\nThanks!</string>
    <string name="check_walkthrough_text">Yes, I am 21 years old</string>
    <string name="agree_privacy_policy_text">I agree to privacy policy</string>
    <string name="home_is_where_you_are">Home is where you are</string>
    <string name="text_gps_walkthrough">For that reason we need to know where you are so we can tailor this app experience especially for you.</string>
    <string name="allow_geolocation">Allow Geolocation</string>
    <string name="titte_login">Login</string>
    <string name="value_facebook" translatable="false">Facebook</string>
    <string name="community_ghost_text">be part\nof the community</string>
    <string name="recipe_ghost_text">toggle between\nunit system</string>
    <string name="recipe_list_ghost_text">toggle between\ngrid &amp; list views</string>
    <string name="recipe_list_ghost_text2">filter by\nregion</string>
    <string name="recipe_list_ghost_text3">filter by\ncategory</string>
    <string name="got_it"><u>got it</u></string>
    <string name="Next_tip"><u>next tip</u></string>
    <string name="skip_tip"><u>skip tutorial</u></string>
    <string name="value_google" translatable="false">Google</string>
    <string name="social_button_google_text">link account to Google+</string>
    <string name="social_button_facebook_text">link account to Facebook</string>
    <string name="value_monin" translatable="false">Monin</string>
    <string name="tittle_account_creation">Account Creation</string>
    <string name="ok">OK</string>
    <string name="confirmation">Confirmation</string>
    <string name="message_confirmation_logout">Do you really want to logout?</string>
    <string name="forgot_password_success_message">Please check your email and click on button to set a new password</string>
    <string name="forgot_password_error_message">Email not found</string>
    <string name="password_long_error_message">Please write a new password, at least 6 characters minimum</string>
    <string name="password_confirm_error_message">New password doesn\'t match confirmation</string>
    <string name="key_message" translatable="false">Message</string>
    <string name="skip">Skip</string>
    <string name="image_item_content_description" translatable="false">Image for the Recipe</string>
    <string name="monin_badge_content_description" translatable="false">recipe from monin</string>
    <string name="defaultTextItemList" translatable="false">Name Recipe</string>
    <string name="flag_content_description" translatable="false">Flag of the origin for the recipe</string>
    <string name="star_content_description" translatable="false">Rating for recipes</string>
    <string name="default_rating_value" translatable="false">115</string>
    <string name="font_path" translatable="false">fonts/AdobeDevanagariRegular.otf</string>
    <string name="header_authorization" translatable="false">Authorization</string>
    <string name="monin_recipes">Monin Recipes</string>
    <string name="detail_recipe">Recipe Detail</string>
    <string name="type_list" translatable="false">list_type</string>
    <string name="search">Search</string>
    <string name="filter_content_description" translatable="false">Filters switch option</string>
    <string name="region_content_description" translatable="false">Filter by region switch option</string>
    <string name="select_category">Select a Category</string>
    <string name="all_recipes">All Recipes</string>
    <string name="your_region">Your Region</string>
    <string name="alcoholic_drinks">Cocktails</string>
    <string name="filter_by_category">Filter By Category</string>
    <string name="key_search_term" translatable="false">searchTearm</string>
    <string name="non_alcoholic_drinks">Mocktails\n(Non-Alcohol)</string>
    <string name="coffe_and_tea">Coffee\nand Hot Tea</string>
    <string name="loading">Loading…</string>
    <string name="favorite_content_description_detail" translatable="false">Favorite button to mark the recipe as favorite</string>
    <string name="share_action_content_description" translatable="false">Share button that makes the app share the description and picture</string>
    <string name="servings_size" translatable="false">- Servings Size <gio:g serving="size">%1$1d</gio:g> oz.</string>
    <string name="servings" translatable="false"><gio:g serving="size">%1$1d</gio:g> Servings</string>
    <string name="glass_type">Glass Type: <gio:g value="type">%1$1s</gio:g></string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="servings_button" translatable="false"><gio:g num="servings">%1$1d</gio:g> Servings</string>
    <string name="servings_button_Help" translatable="false"><gio:g num="servings">2</gio:g> Servings</string>
    <string name="servings_size_text" translatable="false">- Serving Size for <gio:g serving_size="size">%1$1d</gio:g> oz.</string>
    <string name="mood_matcher_question">What are you in the mood for today?</string>
    <string name="lets_see"><![CDATA[See my matches!]]></string>
    <string name="mood_matcher">Mood Matcher</string>
    <string name="create_recipe">Create a new Recipe</string>
    <string name="user_recipes">My Recipes</string>
    <string name="recipe_creation">Recipe Creation</string>
    <string name="community_ghost_detaiL2">Level of difficulty \nhow easy is this drink to make?</string>
    <string name="home_officially_monin">Officially \nMonin</string>
    <string name="home_subtitle_official_monin">A library full of\nour best recipes</string>
    <string name="home_mood_matcher">Mood\nMatcher</string>
    <string name="home_subtitle_mood_matcher">A drink for\nevery occasion</string>
    <string name="home_subtitle_myrecipes">Create and Share\nyour own recipes</string>
    <string name="home_my_recipes">My\nRecipes</string>
    <string name="home_subtitle_create_gallery">A quick and easy\nD.I.Y. Digital Menu</string>
    <string name="home_create_gallery">Design\na Slideshow</string>
    <string name="title_recipe_creation_hint">Please enter a recipe name</string>
    <string name="serving_size" translatable="false">Servings</string>
    <string name="camera">Camera</string>
    <string name="label_add_image">Add\nan Image</string>
    <string name="photo_library">Photo\nLibrary</string>
    <string name="label_ingredients_creation">Select at least one MONIN Ingredient.</string>
    <string name="enter_measure">Enter Measure</string>
    <string name="enter_ingredient">Enter Ingredient</string>
    <string name="content_add_button" translatable="false">add button</string>
    <string name="content_drag_icon" translatable="false">drag image</string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string-array name="units_creation_recipe">
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>
    <string-array name="complexity_creation_recipe">
        <item>Easy</item>
        <item>Medium</item>
        <item>Difficult</item>
    </string-array>
    <string-array name="filters_recipe">
        <item>Cocktails</item>
        <item>Mocktails (Non-Alcohol)</item>
        <item>Coffee and Hot Tea</item>
    </string-array>
    <string-array name="fractions_array">
        <item>none</item>
        <item>1/8</item>
        <item><![CDATA[&#188;]]></item>
        <item>3/8</item>
        <item>5/8</item>
        <item>7/8</item>
    </string-array>
    <string-array name="major">
        <item>spoon</item>
        <item>cup</item>
        <item>teaspoon</item>
        <item>fl oz</item>
        <item>lb</item>
    </string-array>
    <string name="measure_text_format" translatable="false"><gio:g amount="value">%1$s</gio:g> <gio:g fraction="value">%2$s</gio:g> <gio:g major="value">%3$s</gio:g></string>
    <string name="none" translatable="false">none</string>
    <string name="enter_direction">Enter instruction</string>
    <string name="next_step">Next</string>
    <string name="moods_userrecipe_label">Please select applicable criteria</string>
    <string name="share_and_save" translatable="false"><![CDATA[Save & Share]]></string>
    <string name="community">Community</string>
    <string name="transition_tag_image" translatable="false">transition_image_tag</string>
    <string name="filter_by_region">Filter by Region</string>
</resources>