<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="?attr/listPreferredItemHeight"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/dragItemImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/drag_item_icon"
        android:padding="@dimen/space_9dp"
        android:contentDescription="@string/content_drag_icon"
        android:visibility="gone"/>

    <com.softwaremobility.objects.AutoCompleteTextCustom
        android:id="@+id/textNewIngredient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="1"
        android:ems="10"
        android:dropDownWidth="match_parent"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_margin="@dimen/space_3dp"
        android:textColorHint="@color/disabledLoginButton"
        android:background="@drawable/white_edit_text"
        android:drawableRight="@drawable/plus_add_icon"
        android:drawableEnd="@drawable/plus_add_icon"
        android:hint="@string/enter_ingredient"/>

    <TextView
        android:id="@+id/textNewMeasure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/space_3dp"
        android:textColor="@color/disabledLoginButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="@drawable/white_edit_text"
        android:clickable="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:drawableRight="@drawable/plus_add_icon"
        android:drawableEnd="@drawable/plus_add_icon"
        android:text="@string/enter_measure"/>



    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|right"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/addingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_item_icon"
        android:padding="@dimen/space_9dp"
        android:tag="@string/add"
        android:clickable="true"
        android:contentDescription="@string/content_add_button"/>

</LinearLayout>